adding json handlers to server
