# internal/server/handler/handler.go
@@ -1,11 +1,13 @@
 package handler
 
 import (
+	"encoding/json"
 	"fmt"
 	"net/http"
 
 	"github.com/go-chi/chi/v5"
 
+	"github.com/Arcadian-Sky/musthave-metrics/internal/server/models"
 	"github.com/Arcadian-Sky/musthave-metrics/internal/server/storage"
 	"github.com/Arcadian-Sky/musthave-metrics/internal/server/validate"
 )
@@ -130,6 +132,94 @@ func (h *Handler) GetMetricsHandlerFunc(w http.ResponseWriter, r *http.Request) 
 		for name, value := range currentMetrics {
 			fmt.Fprintf(w, "%s: %v\n", name, value)
 		}
+	}
+
+	w.WriteHeader(http.StatusOK)
+}
+
+// @Summary Получает метрики.
+// @Accept json
+// @Produce json
+// @Param data body models.Metrics true "Данные в формате JSON"
+// @Success 200 {object} string "OK"
+// @Failure 404 {object} string "Error"
+// @Router /value [post]
+func (h *Handler) GetMetricsJsonHandlerFunc(w http.ResponseWriter, r *http.Request) {
+	var metrics models.Metrics
+
+	if err := json.NewDecoder(r.Body).Decode(&metrics); err != nil {
+		http.Error(w, err.Error(), http.StatusBadRequest)
+		return
+	}
+	//Получаем данные для вывода
+	metricTypeID, err := storage.GetMetricTypeByCode(metrics.MType)
+	if err != nil {
+		http.Error(w, err.Error(), http.StatusBadRequest)
+		return
+	}
+
+	// Выводим данные
+	currentMetrics := h.s.GetMetric(metricTypeID)
+	var res interface{}
+	fmt.Println(metrics.MType, metrics.ID, currentMetrics)
+	if len(metrics.ID) > 0 {
+		res = currentMetrics[metrics.ID]
+	} else {
+		res = currentMetrics
+	}
+	// fmt.Printf("metricName: %v\n", params.Name)
+	// if params.Name != "" {
+	// 	fmt.Printf("currentMetrics[metricName]: %v\n", currentMetrics[params.Name])
+	// 	if currentMetrics[params.Name] != nil {
+	// 		_, err = w.Write([]byte(fmt.Sprintf("%v", currentMetrics[params.Name])))
+	// 		if err != nil {
+	// 			http.Error(w, "w.Write Error: "+err.Error(), http.StatusNotFound)
+	// 		}
+	// 	} else {
+	// 		http.Error(w, "Metric value not provided", http.StatusNotFound)
+	// 	}
+	// } else {
+	// 	for name, value := range currentMetrics {
+	// 		fmt.Fprintf(w, "%s: %v\n", name, value)
+	// 	}
+	// }
+
+	// Отправить ответ в формате JSON
+	if err := json.NewEncoder(w).Encode(res); err != nil {
+		http.Error(w, err.Error(), http.StatusInternalServerError)
+		return
+	}
+
+	w.WriteHeader(http.StatusOK)
+}
+
+// @Summary Обновляет метрику.
+// @Description Обновляет метрику в хранилище через json обьект.
+// @Accept json
+// @Produce json
+// @Param data body models.Metrics true "Данные в формате JSON"
+// @Success 200 {object} string "OK"
+// @Failure 404 {object} string "Error"
+// @Router /update [post]
+func (h *Handler) UpdateJsonMetricsHandlerFunc(w http.ResponseWriter, r *http.Request) {
+	var metrics models.Metrics
+
+	if err := json.NewDecoder(r.Body).Decode(&metrics); err != nil {
+		http.Error(w, err.Error(), http.StatusBadRequest)
+		return
+	}
+	fmt.Printf("metrics: %v\n", metrics)
+	// Обновляем метрику
+	err := h.s.UpdateJsonMetric(&metrics)
+	if err != nil {
+		http.Error(w, err.Error(), http.StatusBadRequest)
+		return
+	}
+
+	// Отправить ответ в формате JSON
+	if err := json.NewEncoder(w).Encode(metrics); err != nil {
+		http.Error(w, err.Error(), http.StatusInternalServerError)
+		return
 	}
 
 	w.WriteHeader(http.StatusOK)
